tests/rosetta/transpiler/Swift/doomsday-rule.error
exit status 1
/tmp/TestSwiftTranspiler_Rosetta_Golden515488231/001/main.swift:50:94: error: cannot convert value of type 'Any' to expected argument type 'Int'
48 |         let digits: [String: Any] = ["0": 0, "1": 1, "2": 2, "3": 3, "4": 4, "5": 5, "6": 6, "7": 7, "8": 8, "9": 9]
49 |         while (i < Int(((str).count))) {
50 |             n = Int(((n * 10) + ((digits as! [String: Any])[String(Array(str)[i..<(i + 1)])] as! Any)))
   |                                                                                              `- error: cannot convert value of type 'Any' to expected argument type 'Int'
51 |             i = Int((i + 1))
52 |         }

/tmp/TestSwiftTranspiler_Rosetta_Golden515488231/001/main.swift:50:42: warning: forced cast of '[String : Any]' to same type has no effect
48 |         let digits: [String: Any] = ["0": 0, "1": 1, "2": 2, "3": 3, "4": 4, "5": 5, "6": 6, "7": 7, "8": 8, "9": 9]
49 |         while (i < Int(((str).count))) {
50 |             n = Int(((n * 10) + ((digits as! [String: Any])[String(Array(str)[i..<(i + 1)])] as! Any)))
   |                                          `- warning: forced cast of '[String : Any]' to same type has no effect
51 |             i = Int((i + 1))
52 |         }

/tmp/TestSwiftTranspiler_Rosetta_Golden515488231/001/main.swift:50:94: warning: forced cast from 'Any?' to 'Any' only unwraps optionals; did you mean to use '!'?
48 |         let digits: [String: Any] = ["0": 0, "1": 1, "2": 2, "3": 3, "4": 4, "5": 5, "6": 6, "7": 7, "8": 8, "9": 9]
49 |         while (i < Int(((str).count))) {
50 |             n = Int(((n * 10) + ((digits as! [String: Any])[String(Array(str)[i..<(i + 1)])] as! Any)))
   |                                                                                              `- warning: forced cast from 'Any?' to 'Any' only unwraps optionals; did you mean to use '!'?
51 |             i = Int((i + 1))
52 |         }

/tmp/TestSwiftTranspiler_Rosetta_Golden515488231/001/main.swift:75:46: warning: forced cast of 'Int' to same type has no effect
73 |             let d = Int(Int(String(describing: String(describing: String(Array(date)[8..<10]))))!)
74 |             let a = Int(anchorDay(Int(y)))
75 |             var f: Int = (firstDaysCommon[m] as! Int)
   |                                              `- warning: forced cast of 'Int' to same type has no effect
76 |             if isLeapYear(Int(y)) {
77 |                 f = (firstDaysLeap[m] as! Int)

/tmp/TestSwiftTranspiler_Rosetta_Golden515488231/001/main.swift:77:39: warning: forced cast of 'Int' to same type has no effect
75 |             var f: Int = (firstDaysCommon[m] as! Int)
76 |             if isLeapYear(Int(y)) {
77 |                 f = (firstDaysLeap[m] as! Int)
   |                                       `- warning: forced cast of 'Int' to same type has no effect
78 |             }
79 |             var w: Int = (d - f)

/tmp/TestSwiftTranspiler_Rosetta_Golden515488231/001/main.swift:87:5: warning: using '_' to ignore the result of a Void-returning function is redundant
85 |         }
86 |     }
87 |     _ = main()
   |     `- warning: using '_' to ignore the result of a Void-returning function is redundant
88 |     let _benchEnd = _now()
89 |     let _benchMemEnd = _mem()
